# church-helper-desktop

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  DOWNLOAD_ARCHITECTURE.md  LICENSE  PRIVACY.md  README.md  SKILLS.md  UPDATER_SETUP.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.agent/workflows/: build-desktop.md  run-desktop.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  error.rs  lib.rs  main.rs  models.rs  modules.rs
src-tauri/src/services/: download.rs  errata.rs  mod.rs  polling.rs  queue.rs  retention.rs
src-tauri/tests/: real_api_tls_smoke.rs  stub_contract_fixtures.rs
src-tauri/tests/fixtures/: stub_multi_video_latest_week.json  stub_no_optimized_latest_week.json  stub_old_weeks_latest_week.json
src/components/features/dashboard/: StaleWeekBanner.tsx
src/components/features/resource/: DownloadsCard.tsx  DownloadsModal.tsx  (+6 more)
src/components/ui/: CelebrationStack.tsx  RinoovaLogo.tsx  SplashScreen.tsx  button.tsx  card.tsx  input.tsx  switch.tsx  toast.tsx
src/hooks/: useResource.ts  useResourceFileSize.ts
src/layouts/: AppLayout.tsx
src/lib/: savings.ts  theme.ts  utils.ts
src/lib/i18n/: dictionaries.ts  index.ts
src/pages/: Dashboard.tsx  Settings.tsx
src/stores/: appStore.ts  celebrationStore.ts  toastStore.ts
src/types/: index.ts
